[gd_scene load_steps=6 format=3 uid="uid://blqcv4y86k4pt"]

[ext_resource type="Script" path="res://scripts/compendium.gd" id="1_pp7hq"]
[ext_resource type="Shader" path="res://assets/shaders/outline.gdshader" id="2_ebwtv"]
[ext_resource type="Texture2D" uid="uid://cir64h7evgomd" path="res://assets/sprites/arrow.png" id="2_t0k6b"]
[ext_resource type="Texture2D" uid="uid://4jpqu8dxemo5" path="res://assets/sprites/creation_gear.png" id="4_ddaqk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wpljk"]
shader = ExtResource("2_ebwtv")
shader_parameter/color = Color(0.572549, 0.498039, 0.423529, 0.831373)
shader_parameter/thickness = 21.08
shader_parameter/tolerance = 0.0
shader_parameter/diagonals = true
shader_parameter/rounded = true

[node name="Compendium" type="Node2D"]
script = ExtResource("1_pp7hq")

[node name="Page" type="Sprite2D" parent="."]
position = Vector2(512, 512)

[node name="LeftButton" type="TextureButton" parent="."]
material = SubResource("ShaderMaterial_wpljk")
offset_top = 512.0
offset_right = 1024.0
offset_bottom = 1536.0
scale = Vector2(0.15, 0.15)
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("2_t0k6b")
flip_h = true

[node name="RightButton" type="TextureButton" parent="."]
material = SubResource("ShaderMaterial_wpljk")
offset_left = 865.0
offset_top = 512.0
offset_right = 1889.0
offset_bottom = 1536.0
scale = Vector2(0.15, 0.15)
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("2_t0k6b")

[node name="CreateButton" type="TextureButton" parent="."]
offset_left = 435.0
offset_top = 860.0
offset_right = 1459.0
offset_bottom = 1884.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("4_ddaqk")

[node name="CreatureLabel" type="Label" parent="."]
offset_left = 361.0
offset_top = 84.0
offset_right = 687.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_shadow_color = Color(0.151276, 0.151276, 0.151276, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 50

[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="CreateButton" to="." method="_on_create_button_pressed"]
